--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,21 +43,31 @@ body {
 }
 
 .nav-link{
-  color: var(--black-font-color)!important;
+  color: white;
 }
-
-.nav-link.active,
-.nav-link:hover{
-  
-}
-
-
-
 
 /*============= FOOTER =============*/
 
+/* footer */
 
+footer{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	color: #fff;
+	background-color: #333940;
+	padding: 60px 0;
+}
 
+footer a{
+    text-decoration: none;
+    color: white;
+}
 /*============= SOCKET =============*/
 
 
