--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>{% block title %}Esca-Bati-Niger{% endblock %}</title>
 	<link rel="shortcut icon" href="index.html">
 	<!-- Bootstrap 4.5 CSS -->
@@ -16,7 +16,7 @@
 </head>
 <body>	
         <!-- Navigation -->
-	<nav class="navbar bg-light navbar-light navbar-expand-lg">
+	<nav class="navbar bg-dark navbar-white navbar-expand-lg">
 		<div class="container">
 			<a class="navbar-brand" href="{{ path('main_home') }}">EBN</a><!-- logo.png -->
 
@@ -26,25 +26,22 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="{{ path('main_home') }}">Formation</a>
+						<a class="nav-link" href="{{ path('main_training') }}">Formation</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link">Construction</a>
+						<a class="nav-link" href="{{ path('main_building') }}">Construction</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link">Étude</a>
+						<a class="nav-link" href="{{ path('main_study') }}">Étude</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link">Immobilier</a>
+						<a class="nav-link" href="{{ path('main_immovable') }}">Immobilier</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link">Contact</a>
+						<a class="nav-link" href="{{ path('main_contact') }}">Contact</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link">A propos</a>
-					</li>
-					<li class="nav-item">
-						<a href="{{ path('main_all') }}" class="nav-link">Tous</a>
+						<a class="nav-link" href="{{ path('main_about') }}">A propos</a>
 					</li>
 				</ul>
 			</div>
@@ -53,6 +50,13 @@
 	<!-- End Navigation -->
 
         {% block body %}{% endblock %}
+
+        <footer>
+          <p>&copy; <a href="{{ path('main_home') }}">www.esca-bati-niger.com</a></p>
+          <p>Tous droits réservés</p>
+          <h6><a href="{{ path('admin_article_home') }}">Je suis administrateur</a></h6>
+        </footer>
+
         
 	<!-- Script Source Files -->
 
